--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,9 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+  animation: App-logo-spin infinite 10s linear;
   pointer-events: none;
+  filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 1));
 }
 
 .App-header {
