--- a/src/App.css
+++ b/src/App.css
@@ -1,27 +1,23 @@
+body{
+  background-color: #313639;
+}
+
 .App {
   text-align: center;
+  margin: auto;
+  padding: 0px;
+  text-align: center;
+  max-width: 820px;
 }
+
+
 
 .App-logo {
   animation: App-logo-spin infinite 10s linear;
   pointer-events: none;
-  filter: drop-shadow(0px 3px 3px rgba(0, 0, 0, 1));
+  filter: drop-shadow(-1px 3px 6px rgba(35, 42, 52, 1));
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -32,6 +28,88 @@
   }
 }
 
+/* login.js */
+
+h3{
+font-family: 'Source Sans Pro', sans-serif;
+font-size: 3rem;
+color: #232A34 ;
+}
+
+h5 {
+  line-height: .1rem;
+  font-size: 1rem;
+  text-decoration: underline;
+}
+
+.postText{
+  line-height: 1.2rem
+}
+
+/* LoginForm.js */
+button {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 1.2rem
+}
+
+input {
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 1.2rem
+}
+
+.forkbox{
+  background-color: #F1F3D7; 
+}
+
+/* registration */
+
+.register {
+  background: #75B207; 
+  margin: auto;
+  text-align: center;
+  width: 100%;
+  padding: 0.5px;
+  height: 700px
+
+}
+
+/* FoodList */
+
+.foodList{
+  background: #75B207;
+  padding: 0.5px;
+  padding-top: 15px;
+  height: 850px;
+ overflow: auto
+
+}
+.foodCard{
+  background: #F1F3D7; 
+  padding: 5px;
+  margin-top: 15px;
+  font-family: 'Playfair Display', serif;
+}
+
+.editdelete{
+margin: auto;
+max-width: 330px;
+display: flex;
+flex-direction: row;
+justify-content: center;
+justify-content: space-between;
+
+}
+
+.fa-edit{
+  font-size: 2.2rem;
+  cursor: pointer;
+}
+
+.fa-ban{
+  font-size: 2.2rem;
+  cursor: pointer;
+}
+
 .heading {
   font-family: 'Playfair Display', serif;
   font-size: 32px;
@@ -39,6 +117,7 @@
 
 .postText {
   font-family: 'Open Sans', sans-serif;
+  
 }
 
 .delete {
@@ -49,4 +128,16 @@
 
 .edit {
   text-decoration: none;
+}
+
+/* // ADD ITEM \\ */
+.addNewInput {
+margin: 8px;
+padding: 10px;
+font-family: 'Source Sans Pro', sans-serif;
+font-size: 1.2rem;
+}
+
+.editFoodForm {
+  background: #F1F3D7; 
 }
